update generated clients

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -8416,8 +8416,8 @@ spec:
                   properties:
                     active:
                       description: |-
-                        Active is the number of child Jobs with at least 1 pod in a running or pending state, which are not
-                        marked for deletion.
+                        Active is the number of child Jobs with at least 1 pod in a running or pending state
+                        which are not marked for deletion.
                       format: int32
                       type: integer
                     failed:
@@ -8429,8 +8429,9 @@ spec:
                       type: string
                     ready:
                       description: |-
-                        Ready is the number of child Jobs where number of ready pods + completed pods >= total expected pod count
-                        for the Job (i.e., minimum of job.spec.parallelism and job.spec.completions).
+                        Ready is the number of child Jobs where the number of ready pods and completed pods
+                        is greater than or equal to the total expected pod count for the Job (i.e., the minimum
+                        of job.spec.parallelism and job.spec.completions).
                       format: int32
                       type: integer
                     succeeded:
