--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -8335,6 +8335,18 @@ spec:
               suspend:
                 description: Suspend suspends all running child Jobs when set to true.
                 type: boolean
+              ttlSecondsAfterFinished:
+                description: |-
+                  TTLSecondsAfterFinished limits the lifetime of a JobSet that has finished
+                  execution (either Complete or Failed). If this field is set,
+                  TTLSecondsAfterFinished after the JobSet finishes, it is eligible to be
+                  automatically deleted. When the JobSet is being deleted, its lifecycle
+                  guarantees (e.g. finalizers) will be honored. If this field is unset,
+                  the JobSet won't be automatically deleted. If this field is set to zero,
+                  the JobSet becomes eligible to be deleted immediately after it finishes.
+                format: int32
+                minimum: 0
+                type: integer
             type: object
           status:
             description: JobSetStatus defines the observed state of JobSet
