--- a/config/components/manager/manager.yaml
+++ b/config/components/manager/manager.yaml
@@ -93,6 +93,9 @@ spec:
         # More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
         resources:
           requests:
+            cpu: 1
+            memory: 256Mi
+          limits:
             cpu: 2
             memory: 512Mi
       serviceAccountName: controller-manager
