Ran non-test related make commands.

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -72,6 +72,10 @@ spec:
                 x-kubernetes-validations:
                 - message: Value is immutable
                   rule: self == oldSelf
+              managedBy:
+                description: ManagedBy is used to indicate the controller or entity
+                  that manages an JobSet
+                type: string
               network:
                 description: Network defines the networking options for the jobset.
                 properties:
