address ahg comments around comments

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -87,9 +87,8 @@ spec:
                     type: boolean
                   publishNotReadyAddresses:
                     description: |-
-                      PublishNotReadyAddresses indicates that any agent
-                      which deals with endpoints for this Service should disregard any indications of ready/not-ready.
-                      Defaults to true if not set
+                      Indicates if DNS records of pods should be published before the pods are ready.
+                      Defaults to True.
                     type: boolean
                   subdomain:
                     description: |-
