Add name property to failure policy rules.

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -86,6 +86,12 @@ spec:
                           - RestartJobSet
                           - RestartJobSetAndIgnoreMaxRestarts
                           type: string
+                        name:
+                          description: |-
+                            The name of the failure policy rule.
+                            The name is defaulted to 'failurePolicyRuleN' where N is the index of the failure policy rule.
+                            The name must match the regular expression "^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$".
+                          type: string
                         onJobFailureReasons:
                           description: |-
                             The requirement on the job failure reasons. The requirement
@@ -106,6 +112,7 @@ spec:
                           x-kubernetes-list-type: atomic
                       required:
                       - action
+                      - name
                       - onJobFailureReasons
                       type: object
                     type: array
