Improve the API generated docs for managedBy

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -73,8 +73,19 @@ spec:
                 - message: Value is immutable
                   rule: self == oldSelf
               managedBy:
-                description: ManagedBy is used to indicate the controller or entity
-                  that manages a JobSet
+                description: |-
+                  ManagedBy is used to indicate the controller or entity that manages a JobSet.
+                  The built-in JobSet controller reconciles JobSets which don't have this
+                  field at all or the field value is the reserved string
+                  `jobset.sigs.k8s.io/jobset-controller`, but skips reconciling JobSets
+                  with a custom value for this field.
+
+
+                  The value must be a valid domain-prefixed path (e.g. acme.io/foo) -
+                  all characters before the first "/" must be a valid subdomain as defined
+                  by RFC 1123. All characters trailing the first "/" must be valid HTTP Path
+                  characters as defined by RFC 3986. The value cannot exceed 63 characters.
+                  The field is immutable.
                 type: string
               network:
                 description: Network defines the networking options for the jobset.
