--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -15,9 +15,9 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - description: Phase of the JobSet
-      jsonPath: .status.phase
-      name: Phase
+    - description: Final state of JobSet
+      jsonPath: .status.terminalState
+      name: TerminalState
       type: string
     - description: Number of restarts
       jsonPath: .status.restarts
@@ -8491,10 +8491,6 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
-              phase:
-                default: Running
-                description: Phase of the JobSet.
-                type: string
               replicatedJobsStatus:
                 description: ReplicatedJobsStatus track the number of JobsReady for
                   each replicatedJob.
@@ -8555,6 +8551,11 @@ spec:
                   of restarts.
                 format: int32
                 type: integer
+              terminalState:
+                description: |-
+                  TerminalState the state of the JobSet when it finishes execution.
+                  It can be either Complete or Failed. Otherwise, it is empty by default.
+                type: string
             type: object
         type: object
     served: true
