feat: add terminalState to jobset status (#594)
* feat: add jobset status

feat: add jobset status

* add updateConditionAndPhase comment

* remove unnecessary ctx

* feat: add jobset TerminalState field

Signed-off-by: googs1025 <googs1025@gmail.com>

* set status terminalstate field in setJobSetCompletedCondition and setJobSetFailedCondition

* verify the terminalState during integration tests

---------

Signed-off-by: googs1025 <googs1025@gmail.com>

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -15,6 +15,10 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - description: Final state of JobSet
+      jsonPath: .status.terminalState
+      name: TerminalState
+      type: string
     - description: Number of restarts
       jsonPath: .status.restarts
       name: Restarts
@@ -8546,6 +8550,11 @@ spec:
                   of restarts.
                 format: int32
                 type: integer
+              terminalState:
+                description: |-
+                  TerminalState the state of the JobSet when it finishes execution.
+                  It can be either Complete or Failed. Otherwise, it is empty by default.
+                type: string
             type: object
         type: object
     served: true
