--- a/hack/genref/config.yaml
+++ b/hack/genref/config.yaml
@@ -1,3 +1,4 @@
+# more details can be found  https://github.com/kubernetes-sigs/reference-docs/tree/master/genref
 hiddenMemberFields:
   - "TypeMeta"
   - "ObjectMeta"
