remove comments about defaults

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -71,12 +71,10 @@ spec:
                     description: |-
                       JobIndex is the index of Job which contains the coordinator pod
                       (i.e., for a ReplicatedJob with N replicas, there are Job indexes 0 to N-1).
-                      Defaults to 0 if unset.
                     type: integer
                   podIndex:
-                    description: |-
-                      PodIndex is the Job completion index of the coordinator pod.
-                      Defaults to 0 if unset.
+                    description: PodIndex is the Job completion index of the coordinator
+                      pod.
                     type: integer
                   replicatedJob:
                     description: |-
