--- a/examples/failure-policy/restartjobsetandignoremaxrestarts-action.yaml
+++ b/examples/failure-policy/restartjobsetandignoremaxrestarts-action.yaml
@@ -7,6 +7,8 @@ spec:
   failurePolicy:
     maxRestarts: 3
     rules:
+      # The JobSet will restart an unlimited number of times
+      # when the leader job fails.
       - action: RestartJobSetAndIgnoreMaxRestarts
         targetReplicatedJobs:
         - leader
