--- a/examples/failure-policy/onjobfailurereasons-present.yaml
+++ b/examples/failure-policy/onjobfailurereasons-present.yaml
@@ -6,7 +6,7 @@ spec:
   failurePolicy:
     maxRestarts: 3
     rules:
-      # The JobSet will restart and unlimited number of times when the
+      # The JobSet will restart an unlimited number of times when the
       # leader job fails with the failure reason BackoffLimitExceeded.
       - action: RestartJobSetAndIgnoreMaxRestarts 
         targetReplicatedJobs:
