--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -98,6 +98,7 @@ spec:
                     format: int32
                     type: integer
                   restartStrategy:
+                    default: Recreate
                     description: |-
                       RestartStrategy defines the strategy to use when restarting the JobSet.
                       Defaults to Recreate.
