Add enum validation

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -102,6 +102,9 @@ spec:
                     description: |-
                       RestartStrategy defines the strategy to use when restarting the JobSet.
                       Defaults to Recreate.
+                    enum:
+                    - Recreate
+                    - BlockingRecreate
                     type: string
                   rules:
                     description: |-
