Add restart strategy (#686)
* Add restart strategy to API

* Remove webhook, replace with openapi defaulting

* Update creation logic to account for BlockingRecreate

* Update integration test for existing Recreate strategy

* Fix integration tests

* Document restartStrategy by reusing existing max-restarts example

* Address comment

* Add enum validation

* make generate

* Fix issues with make generate

* Fix example

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -97,6 +97,15 @@ spec:
                       A restart is achieved by recreating all active child jobs.
                     format: int32
                     type: integer
+                  restartStrategy:
+                    default: Recreate
+                    description: |-
+                      RestartStrategy defines the strategy to use when restarting the JobSet.
+                      Defaults to Recreate.
+                    enum:
+                    - Recreate
+                    - BlockingRecreate
+                    type: string
                   rules:
                     description: |-
                       List of failure policy rules for this JobSet.
