--- a/config/default/manager_config_patch.yaml
+++ b/config/default/manager_config_patch.yaml
@@ -9,7 +9,13 @@ spec:
       containers:
       - name: manager
         args:
+        - "--config=/controller_manager_config.yaml"
         - "--zap-log-level=2"
-        - "--health-probe-bind-address=:8081"
-        - "--metrics-bind-address=:8443"
-        - "--leader-elect"
+        volumeMounts:
+        - name: manager-config
+          mountPath: /controller_manager_config.yaml
+          subPath: controller_manager_config.yaml
+      volumes:
+      - name: manager-config
+        configMap:
+          name: manager-config
