Update KEP with DependsOn API
Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

--- a/keps/672-serial-job-execution/kep.yaml
+++ b/keps/672-serial-job-execution/kep.yaml
@@ -1,4 +1,4 @@
-title: Serial Job Execution with StartupPolicy API
+title: Serial Job Execution with DependsOn API
 kep-number: 672
 authors:
   - "@andreyvelich"
