--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -200,6 +200,40 @@ spec:
                   set.
                 items:
                   properties:
+                    dependsOn:
+                      description: |-
+                        DependsOn is an optional list that specifies the preceding ReplicatedJobs upon which
+                        the current ReplicatedJob depends. If specified, the ReplicatedJob will be created
+                        only after the referenced ReplicatedJobs reach their desired state.
+                        The Order of ReplicatedJobs is defined by their enumeration in the slice.
+                        Note, that the first ReplicatedJob in the slice cannot use the DependsOn API.
+                        This API is mutually exclusive with the StartupPolicy API.
+                      items:
+                        description: DependsOn defines the dependency on the previous
+                          ReplicatedJob status.
+                        properties:
+                          name:
+                            description: Name of the previous ReplicatedJob.
+                            type: string
+                          status:
+                            description: Status defines the condition for the ReplicatedJob.
+                              Only Ready or Complete status can be set.
+                            enum:
+                            - Ready
+                            - Complete
+                            type: string
+                        required:
+                        - name
+                        - status
+                        type: object
+                      maxItems: 1
+                      type: array
+                      x-kubernetes-list-map-keys:
+                      - name
+                      x-kubernetes-list-type: map
+                      x-kubernetes-validations:
+                      - message: Value is immutable
+                        rule: self == oldSelf
                     name:
                       description: |-
                         Name is the name of the entry and will be used as a suffix
@@ -9039,6 +9073,12 @@ spec:
                 minimum: 0
                 type: integer
             type: object
+            x-kubernetes-validations:
+            - message: StartupPolicy and DependsOn APIs are mutually exclusive
+              rule: '!(has(self.startupPolicy) && self.startupPolicy.startupPolicyOrder
+                == ''InOrder'' && self.replicatedJobs.all(x, has(x.dependsOn)))'
+            - message: DependsOn can't be set for the first ReplicatedJob
+              rule: '!(has(self.replicatedJobs[0].dependsOn))'
           status:
             description: JobSetStatus defines the observed state of JobSet
             properties:
