--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -207,6 +207,7 @@ spec:
                         only after the referenced ReplicatedJobs reach their desired state.
                         The Order of ReplicatedJobs is defined by their enumeration in the slice.
                         Note, that the first ReplicatedJob in the slice cannot use the DependsOn API.
+                        Currently, only a single item is supported in the DependsOn list.
                         This API is mutually exclusive with the StartupPolicy API.
                       items:
                         description: DependsOn defines the dependency on the previous
