--- a/site/static/examples/depends-on/depends-on.yaml
+++ b/site/static/examples/depends-on/depends-on.yaml
@@ -1,7 +1,7 @@
 # This example creates three ReplicatedJobs.
 # The launcher ReplicatedJob waits until the initializer ReplicatedJob is Complete.
 # After that, the worker ReplicatedJob waits until the launcher ReplicatedJob is Ready.
-# Launcher ReplicatedJob will be in Ready status once InitContainer is finished.
+# Launcher ReplicatedJob will be in Ready status once StartupProbe is finished.
 apiVersion: jobset.x-k8s.io/v1alpha2
 kind: JobSet
 metadata:
@@ -28,13 +28,6 @@ spec:
         spec:
           template:
             spec:
-              initContainers:
-                - name: initializer
-                  image: busybox
-                  command:
-                    - /bin/sh
-                    - -c
-                    - "echo 'launcher initializes for 10 seconds' && sleep 10"
               containers:
                 - name: launcher
                   image: busybox
@@ -42,6 +35,12 @@ spec:
                     - /bin/sh
                     - -c
                     - "echo 'launcher runs for 20 seconds' && sleep 20"
+                  startupProbe:
+                    exec:
+                      command:
+                        - echo
+                        - "started"
+                    initialDelaySeconds: 5
     - name: worker
       dependsOn:
         - name: launcher
