update python sdk files with latest changes

--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,9 @@ var/
 pip-log.txt
 pip-delete-this-directory.txt
 
+# github workflows
+sdk/python/.github
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
