--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -208,6 +208,8 @@ spec:
                         The Order of ReplicatedJobs is defined by their enumeration in the slice.
                         Note, that the first ReplicatedJob in the slice cannot use the DependsOn API.
                         Currently, only a single item is supported in the DependsOn list.
+                        If JobSet is suspended the all active ReplicatedJobs will be suspended. When JobSet is
+                        resumed the Job sequence starts again.
                         This API is mutually exclusive with the StartupPolicy API.
                       items:
                         description: DependsOn defines the dependency on the previous
