increase memory limit and remove cpu limit for the default deployment

--- a/config/components/manager/manager.yaml
+++ b/config/components/manager/manager.yaml
@@ -96,7 +96,6 @@ spec:
             cpu: 500m
             memory: 128Mi
           limits:
-            cpu: 2
-            memory: 512Mi
+            memory: 4Gi
       serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
