--- a/charts/jobset/Chart.yaml
+++ b/charts/jobset/Chart.yaml
@@ -1,12 +1,41 @@
+#
+# Copyright 2025 The Kubernetes authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 apiVersion: v2
+
 name: jobset
-description: A Helm chart for JobSet Controller
+
+description: A Helm chart for deploying JobSet controller and webhook on Kubernetes.
+
 type: application
-version: 0.1.0
-appVersion: "0.7.2"
+
+version: 0.7.3
+
+appVersion: 0.7.3
+
 keywords:
-  - kubernetes
-  - jobset
-  - batch
+- kubernetes
+- batch
+- jobset
+
+home: https://github.com/kubernetes-sigs/jobset
+
 maintainers:
-  - name: Kubernetes SIG Batch
+- name: ahg-g
+  url: https://github.com/ahg-g
+- name: danielvegamyhre
+  url: https://github.com/danielvegamyhre
+- name: kannon92
+  url: https://github.com/kannon92
