--- a/charts/jobset/templates/controller/configmap.yaml
+++ b/charts/jobset/templates/controller/configmap.yaml
@@ -1,4 +1,4 @@
-{{/*
+{{- /*
 Copyright 2025 The Kubernetes authors.
 
 Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,11 +12,17 @@ distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-*/}}
+*/ -}}
 
-Thank you for installing {{ .Chart.Name }}. The JobSet controller is now deployed in your cluster. To verify that the controller is running, you can run:
-  kubectl get deployment -n {{ .Release.Namespace }} {{ include "jobset.controller.deployment.name" . }}
-{{- if .Values.metrics.enabled }}
-To access the metrics endpoint:
-  kubectl port-forward svc/{{ include "jobset.metrics.service.name" . }} {{ .Values.metrics.service.port }}
-{{- end }}
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "jobset.controller.configMap.name" . }}
+  namespace: {{ .Release.Namespace}}
+  labels:
+    {{- include "jobset.controller.labels" . | nindent 4 }}
+data:
+  controller_manager_config.yaml: |2
+
+    apiVersion: config.jobset.x-k8s.io/v1alpha1
+    kind: Configuration
