--- a/charts/jobset/values.yaml
+++ b/charts/jobset/values.yaml
@@ -1,96 +1,160 @@
-replicaCount: 1
 
-crds:
-  enabled: true
-  install: true
+#
+# Copyright 2025 The Kubernetes authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 
-image:
-  repository: jobset-controller
-  pullPolicy: IfNotPresent
-  tag: ""
-
-imagePullSecrets: []
+# -- String to partially override release name.
 nameOverride: ""
+
+# -- String to fully override release name.
 fullnameOverride: ""
 
-serviceAccount:
-  create: true
-  annotations: {}
-  name: ""
+# -- Common labels to add to the jobset resources.
+commonLabels: {}
 
-podAnnotations: {}
-podSecurityContext:
-  runAsNonRoot: true
-  seccompProfile:
-    type: RuntimeDefault
+image:
+  # -- Image registry.
+  registry: registry.k8s.io
+  # -- Image repository.
+  repository: jobset/jobset
+  # -- Image tag.
+  # @default -- If not set, the chart appVersion will be used.
+  tag: v0.7.3
+  # -- Image pull policy.
+  pullPolicy: IfNotPresent
+  # -- Image pull secrets for private image registry.
+  pullSecrets: []
+  # - name: <secret-name>
 
-securityContext:
-  allowPrivilegeEscalation: false
-  capabilities:
-    drop:
-      - "ALL"
+controller:
+  # -- Replicas of the jobset controller deployment.
+  replicas: 1
 
-resources:
-  limits:
-    cpu: 2
-    memory: 512Mi
-  requests:
-    cpu: 500m
-    memory: 128Mi
+  leaderElection:
+    # -- Whether to enable leader election for jobset controller.
+    enable: true
 
-nodeSelector: {}
-tolerations: []
-affinity: {}
+  # -- Environment variables of the jobset controller container.
+  env: []
 
-rbac:
-  create: true
-  createAggregateRoles: true
+  # -- Environment variable sources of the jobset controller container.
+  envFrom: []
+
+  # -- Volume mounts of the jobset controller container.
+  volumeMounts: []
+
+  # -- Resources of the jobset controller container.
+  resources:
+    requests:
+      cpu: 500m
+      memory: 128Mi
+    limits:
+      cpu: 2
+      memory: 512Mi
+
+  # -- Security context of the jobset controller container.
+  securityContext:
+    allowPrivilegeEscalation: false
+    capabilities:
+      drop:
+      - ALL
+
+  # -- Volumes of the jobset controller pods.
+  volumes: []
+
+  # -- Node selector of the jobset controller pods.
+  nodeSelector: {}
+
+  # -- Affinity of the jobset controller pods.
+  affinity: {}
+
+  # -- Tolerations of the jobset controller pods.
+  tolerations: []
+
+  # -- Security context of the jobset controller pods.
+  podSecurityContext:
+    runAsNonRoot: true
+    seccompProfile:
+      type: RuntimeDefault
+
+  serviceAccount:
+    # -- Whether to create a service account for the jobset controller. 
+    create: true
+    # -- (Optional) Specifies the name of the jobset controller service account.
+    name: ""
+    # -- Extra annotations of the jobset controller service account.
+    annotations: {}
+
+  rbac:
+    # -- Whether to create RBAC resources for the jobset controller.
+    create: true
 
 webhook:
-  enabled: true
-  port: 9443
+  # -- Whether to enable the jobset webhook.
+  enable: true
+  
   service:
+    # -- Type of the jobset webhook service.
     type: ClusterIP
+
+    # -- Port of the jobset webhook service.
     port: 443
+
+  mutate:
+    # -- Timeout seconds of the jobset mutating webhook.
+    timeoutSeconds: 10
+    # -- Failure policy of the jobset mutating webhook.
+    failurePolicy: Fail
+
+  validate:
+    # -- Timeout seconds of the jobset validating webhook.
+    timeoutSeconds: 10
+    # -- Failure policy of the jobset validating webhook.
+    failurePolicy: Fail
+  
   certManager:
-    enabled: true
-    issuerGroup: cert-manager.io
-    issuerKind: Issuer
-    issuerName: jobset-selfsigned-issuer
-  mutatingWebhook:
-    failurePolicy: Fail
-    timeoutSeconds: 10
-  validatingWebhook:
-    failurePolicy: Fail
-    timeoutSeconds: 10
+    # -- Whether to use cert-manager to generate certificates for the jobset webhook.
+    enable: false
 
-metrics:
-  enabled: true
-  service:
-    port: 8443
-    type: ClusterIP
-  serviceMonitor:
-    enabled: false
-    interval: 30s
-    scrapeTimeout: 10s
-    labels: {}
+    # -- The reference to the issuer.
+    issuerRef: {}
+      # name: selfsigned
+      # kind: ClusterIssuer
 
-leaderElection:
-  enabled: true
-  resourceName: jobset-leader-election
-
-certManager:
-  enabled: true
-  certificate:
+    # -- The duration of the certificate validity.
     duration: 8760h # 1 year
+
+    # -- The duration before the certificate expiration to renew the certificate.
     renewBefore: 720h # 30 days
 
-manager:
-  healthProbe:
-    port: 8081
-    livenessPath: /healthz
-    readinessPath: /readyz
-    livenessInitialDelay: 15
-    livenessTimeout: 30
-    readinessInitialDelay: 5
-    readinessTimeout: 30
+metrics:
+  # -- Whether to enable Prometheus metrics exporting.
+  enable: true
+
+  service:
+    # -- Type of the Prometheus metrics service.
+    type: ClusterIP
+    # -- Port of the Prometheus metrics service.
+    port: 8443
+
+  serviceMonitor:
+    # -- Whether to create a Prometheus service monitor.
+    enable: false
+    # -- Interval at which metrics should be scraped.
+    interval: 30s
+    # -- Timeout after which the scrape is ended.
+    scrapeTimeout: 10s
+    # -- Labels for the Prometheus service monitor.
+    labels: {}
