--- a/charts/jobset/tests/controller/deployment_test.yaml
+++ b/charts/jobset/tests/controller/deployment_test.yaml
@@ -18,6 +18,7 @@ suite: Test controller deployment
 
 templates:
   - controller/deployment.yaml
+  - controller/configmap.yaml
 
 release:
   name: jobset
@@ -30,6 +31,7 @@ tests:
         registry: test-registry
         repository: test-repository
         tag: test-tag
+    template: controller/deployment.yaml
     asserts:
       - equal:
           path: spec.template.spec.containers[?(@.name=="controller")].image
@@ -39,6 +41,7 @@ tests:
     set:
       image:
         pullPolicy: Always
+    template: controller/deployment.yaml
     asserts:
       - equal:
           path: spec.template.spec.containers[*].imagePullPolicy
@@ -48,6 +51,7 @@ tests:
     set:
       controller:
         replicas: 10
+    template: controller/deployment.yaml
     asserts:
       - equal:
           path: spec.replicas
@@ -57,6 +61,7 @@ tests:
     set:
       controller:
         replicas: 0
+    template: controller/deployment.yaml
     asserts:
       - equal:
           path: spec.replicas
@@ -74,6 +79,7 @@ tests:
                 name: test-configmap
                 key: test-key
                 optional: false
+    template: controller/deployment.yaml
     asserts:
       - contains:
           path: spec.template.spec.containers[?(@.name=="controller")].env
@@ -100,6 +106,7 @@ tests:
           - secretRef:
               name: test-secret
               optional: false
+    template: controller/deployment.yaml
     asserts:
       - contains:
           path: spec.template.spec.containers[?(@.name=="controller")].envFrom
@@ -122,6 +129,7 @@ tests:
             mountPath: /volume1
           - name: volume2
             mountPath: /volume2
+    template: controller/deployment.yaml
     asserts:
       - contains:
           path: spec.template.spec.containers[?(@.name=="controller")].volumeMounts
@@ -144,6 +152,7 @@ tests:
           limits:
             memory: "128Mi"
             cpu: "500m"
+    template: controller/deployment.yaml
     asserts:
       - equal:
           path: spec.template.spec.containers[?(@.name=="controller")].resources
@@ -169,6 +178,7 @@ tests:
               - ALL
           runAsNonRoot: true
           privileged: false
+    template: controller/deployment.yaml
     asserts:
       - equal:
           path: spec.template.spec.containers[?(@.name=="controller")].securityContext.readOnlyRootFilesystem
@@ -203,6 +213,7 @@ tests:
         pullSecrets:
           - name: test-secret1
           - name: test-secret2
+    template: controller/deployment.yaml
     asserts:
       - equal:
           path: spec.template.spec.imagePullSecrets[0].name
@@ -219,6 +230,7 @@ tests:
             emptyDir: {}
           - name: volume2
             emptyDir: {}
+    template: controller/deployment.yaml
     asserts:
       - contains:
           path: spec.template.spec.volumes
@@ -239,6 +251,7 @@ tests:
         nodeSelector:
           key1: value1
           key2: value2
+    template: controller/deployment.yaml
     asserts:
       - equal:
           path: spec.template.spec.nodeSelector.key1
@@ -268,6 +281,7 @@ tests:
                       operator: In
                       values:
                         - another-node-label-value
+    template: controller/deployment.yaml
     asserts:
       - equal:
           path: spec.template.spec.affinity
@@ -301,6 +315,7 @@ tests:
           - key: key2
             operator: Exists
             effect: NoSchedule
+    template: controller/deployment.yaml
     asserts:
       - equal:
           path: spec.template.spec.tolerations
