Simplify values to keep a min of set of params
Signed-off-by: Yi Chen <github@chenyicn.net>

--- a/charts/jobset/templates/webhook/certmanager/certificate.yaml
+++ b/charts/jobset/templates/webhook/certmanager/certificate.yaml
@@ -37,8 +37,8 @@ spec:
   dnsNames:
   - {{ include "jobset.webhook.service.name" . }}.{{ .Release.Namespace }}.svc
   - {{ include "jobset.webhook.service.name" . }}.{{ .Release.Namespace }}.svc.cluster.local
-  duration: {{ .Values.webhook.certManager.duration }}
-  renewBefore: {{ .Values.webhook.certManager.renewBefore }}
+  duration: 8760h
+  renewBefore: 720h
   usages:
   - server auth
   - client auth
