--- a/charts/jobset/templates/webhook/secret.yaml
+++ b/charts/jobset/templates/webhook/secret.yaml
@@ -14,8 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */ -}}
 
-{{- if .Values.webhook.enable }}
-{{- if not .Values.webhook.certManager.enable }}
+{{- if not .Values.certManager.enable }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -28,5 +27,4 @@ data:
   ca.key: ""
   tls.crt: ""
   tls.key: ""
-{{- end }}
 {{- end }}
