--- a/charts/jobset/templates/webhook/validating_webhook_configuration.yaml
+++ b/charts/jobset/templates/webhook/validating_webhook_configuration.yaml
@@ -14,14 +14,13 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */ -}}
 
-{{- if .Values.webhook.enable }}
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   name: {{ include "jobset.webhook.validatingWebhookConfiguration.name" . }}
   labels:
     {{- include "jobset.webhook.labels" . | nindent 4 }}
-  {{- if .Values.webhook.certManager.enable }}
+  {{- if .Values.certManager.enable }}
   annotations:
     cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "jobset.webhook.secret.name" . }}
   {{- end }}
@@ -68,4 +67,3 @@ webhooks:
     - key: jobset.sigs.k8s.io/jobset-name
       operator: Exists
   sideEffects: None
-{{- end }}
