--- a/charts/jobset/tests/webhook/secret_test.yaml
+++ b/charts/jobset/tests/webhook/secret_test.yaml
@@ -13,27 +13,20 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-apiVersion: v2
 
-name: jobset
+suite: Test webhook service
 
-description: A Helm chart for deploying JobSet controller and webhook on Kubernetes.
+templates:
+  - webhook/service.yaml
 
-type: application
+release:
+  name: jobset
+  namespace: jobset-system
 
-version: 0.7.3
-
-keywords:
-- kubernetes
-- batch
-- jobset
-
-home: https://github.com/kubernetes-sigs/jobset
-
-maintainers:
-- name: ahg-g
-  url: https://github.com/ahg-g
-- name: danielvegamyhre
-  url: https://github.com/danielvegamyhre
-- name: kannon92
-  url: https://github.com/kannon92
+tests:
+  - it: Should create webhook service by default
+    asserts:
+      - containsDocument:
+          apiVersion: v1
+          kind: Service
+          name: jobset-webhook-service
