--- a/charts/jobset/templates/controller/cluster_role.yaml
+++ b/charts/jobset/templates/controller/cluster_role.yaml
@@ -131,7 +131,6 @@ rules:
   - configurations/status
   verbs:
   - get
-{{- if .Values.webhook.enable }}
 - apiGroups:
   - admissionregistration.k8s.io
   resources:
@@ -142,7 +141,6 @@ rules:
   - list
   - watch
   - update
-{{- end }}
 - apiGroups:
   - authentication.k8s.io
   resources:
@@ -155,7 +153,7 @@ rules:
   - subjectaccessreviews
   verbs:
   - create
-{{- if .Values.metrics.enable }}
+{{- if .Values.prometheus.enable }}
 - nonResourceURLs:
   - /metrics
   verbs:
