--- a/charts/jobset/templates/prometheus/service.yaml
+++ b/charts/jobset/templates/prometheus/service.yaml
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */ -}}
 
-{{- if .Values.metrics.enable }}
+{{- if .Values.prometheus.enable }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -23,12 +23,12 @@ metadata:
   labels:
     {{- include "jobset.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.metrics.service.type }}
+  type: ClusterIP
   selector:
     {{- include "jobset.controller.selectorLabels" . | nindent 4 }}
   ports:
   - name: metrics
-    port: {{ .Values.metrics.service.port }}
+    port: 8443
     targetPort: metrics
     protocol: TCP
 {{- end }}
